Improve exercises and README

--- a/Notebooks/Harjoitus_Sklearn_1.ipynb
+++ b/Notebooks/Harjoitus_Sklearn_1.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "Asentaaksesi tarvittavat paketit omalla koneellasi harjoituksen suorittamista varten:\n",
     "```\n",
-    "$ pip3 install scikit-learn pandas imbalanced-learn matplotlib==2.2.2\n",
+    "$ pip3 install scikit-learn pandas matplotlib==2.2.2\n",
     "```\n",
     "\n",
     "## Syntaksi tutuksi\n",
@@ -30,6 +30,124 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Jupyter Notebookeissa ajettujen solujen tiedot, kuten muuttujien arvot jäävät muistiin. \n",
+    "Tämä mahdollistaa sen, että skriptejä voi suorittaa osissa interaktiivisesti samalla tavalla, kuin \n",
+    "Pythonin konsolia käytettäessä. Aja seuraavat kaksi solua"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "a = 2"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print(a+2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Tämä luo myös haasteita muuttujien arvoja muutettaessa. \n",
+    "Aja seuraavat kaksi solua ja aja sen jälkeen ne uudestaan.\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "a *= 2"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "if a == 4:\n",
+    "    print(\"Hyvä\")\n",
+    "elif a == 8:\n",
+    "    print(\"Klikkasit solua kaksi kertaa!\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Jos Notebookkia ajaessasi tuntuu siltä, että muuttujien arvot eivät ole mitä pitäisi, aja \n",
+    "kaikki ylemmät solut (muuttujan määrittelystä asti) uudestaan kertaalleen saadaksesi solujen arvot oikeiksi.\n",
+    "\n",
+    "`print`-funktion käyttö on suositeltavaa monissa kohdissa (data framejen yhteydessä muista `.head(n)`), jotta\n",
+    "näet mitä datallesi tapahtuu.\n",
+    "\n",
+    "#### Tehtävistä\n",
+    "Tehtävissä on vihjeitä eri moduulien käytöstä. Aluksi niiden `import`-lauseet on lisätty valmiiksi, \n",
+    "mutta usein joudut lisäämään ne itse.\n",
+    "\n",
+    "Tehtäviin muuttujat jotka käyttäjän on tarkoitus täydentää on alustettu arvolla `None`. Tällöin suoritus keskeytyy virheeseen,\n",
+    " ellei käyttäjä täydennä muuttujien arvoja. Aja ensin solu alla täydentämättä X:n arvoa ja sitten uudestaan antamalla X:n \n",
+    " arvoksi 3.14.\n",
+    " "
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "# Aseta X:n arvoksi piin kolme ensimmäistä numeroa\n",
+    "X = None\n",
+    "assert X is not None\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "execution_count": null,
+   "outputs": []
   },
   {
    "cell_type": "markdown",
@@ -59,7 +177,7 @@
     "\n",
     "X, y = make_classification(n_samples=1000, n_features=4, n_classes=3, n_informative=2, n_clusters_per_class=1)\n",
     "X_train, X_test, y_train, y_test = X[:50], X[50:], y[:50], y[50:]\n",
-    "clf = svm.SVC()\n",
+    "clf = svm.SVC(gamma='auto')\n",
     "clf.fit(X_train, y_train)\n",
     "y_pred = clf.predict(X_test)\n",
     "report = classification_report(y_test, y_pred, target_names=[\"class A\", \"class B\", \"class C\"])\n",
@@ -173,7 +291,7 @@
     "# Lue aineisto levyltä\n",
     "df = None\n",
     "\n",
-    "assert df"
+    "assert df is not None"
    ]
   },
   {
@@ -225,7 +343,7 @@
     "y = None\n",
     "X = None\n",
     "\n",
-    "assert y and X "
+    "assert X is not None "
    ]
   },
   {
@@ -257,7 +375,7 @@
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "X_train, X_test, y_train, y_test = None, None, None, None\n",
-    "assert X_train"
+    "assert X_train is not None"
    ]
   },
   {
@@ -316,7 +434,7 @@
    "source": [
     "scaler = None\n",
     "X_train = None\n",
-    "assert scaler and X_train"
+    "assert scaler is not None and X_train is not None"
    ]
   },
   {
@@ -414,7 +532,7 @@
     "\n",
     "Datan esikäsittelyn jälkeen voidaan siirtyä luokitteluun. Kokeile ensin yhdellä algoritmilla ja käy läpi osiot \n",
     "[Opettaminen](#Opettaminen) ja [Testaaminen](#Testaaminen), jonka jälkeen voit toistaa samat vaiheet muilla\n",
-    "algoritmeilla.\n",
+    "algoritmeilla ajan salliessa.\n",
     "\n",
     "### Opettaminen\n",
     "Luo opetettu malli käyttäen algoritmia [KNeighborsClassifier](https://scikit-learn.org/stable/modules/generated/sklearn.neighbors.KNeighborsClassifier.html#sklearn.neighbors.KNeighborsClassifier)"
@@ -433,7 +551,7 @@
    "source": [
     "# Lisää import-lause algoritmille\n",
     "clf = None\n",
-    "assert clf"
+    "assert clf is not None"
    ]
   },
   {
@@ -456,7 +574,7 @@
    "source": [
     "# Lisää import-lause algoritmille\n",
     "clf = None\n",
-    "assert clf"
+    "assert clf is not None"
    ]
   },
   {
@@ -483,7 +601,7 @@
    "source": [
     "# Lisää import-lause algoritmille\n",
     "clf = None\n",
-    "assert clf\n",
+    "assert clf is not None\n",
     "\n",
     "\n"
    ]
@@ -526,7 +644,8 @@
     "Opettamisen jälkeen luonnollinen seuraava vaihe on mallin testaaminen.\n",
     " \n",
     "### Ennusteiden luominen\n",
-    "Mallia voidaan nyt käyttää ennusteiden luomiseen. Luo ennustetut arvot testausjoukolle `X_test`."
+    "Mallia voidaan nyt käyttää ennusteiden luomiseen. [Luo ennustetut arvot](https://scikit-learn.org/stable/tutorial/basic/tutorial.html#learning-and-predicting)\n",
+    "`y_pred` koko testijoukolle `X_test`. "
    ],
    "metadata": {
     "collapsed": false,
