--- a/Notebooks/Harjoitus_Sklearn_2.ipynb
+++ b/Notebooks/Harjoitus_Sklearn_2.ipynb
@@ -124,7 +124,7 @@
    "source": [
     "## Luokittelu\n",
     "Nyt edellistä harjoitusta hyväksi käyttäen suorita vaiheet ja luokittele malli haluamallasi algoritmilla \n",
-    "ja parametreilla. Yritä päästä yleiseen tarkkuuteen OA>=0.9.\n",
+    "ja parametreilla. PCA-analyysiä ei ole tarve käyttää. Yritä päästä yleiseen tarkkuuteen OA>=0.9.\n",
     "\n",
     "Muista suorittaa myös standardointi."
    ]
@@ -135,7 +135,9 @@
    "outputs": [],
    "source": [
     "# Esikäsittele ja opeta\n",
-    "\n"
+    "clf = None\n",
+    "y_pred = None\n",
+    "assert clf is not None and y_pred is not None\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -146,22 +148,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "None\nNone\n"
+     ],
+     "output_type": "stream"
+    },
+    {
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-56a16c68fb2d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreport\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcm\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mplot_confusion_matrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtarget_names\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtarget_names\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnormalize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'dataset' is not defined"
+     ],
+     "ename": "NameError",
+     "evalue": "name 'dataset' is not defined",
+     "output_type": "error"
+    }
+   ],
    "source": [
     "# Evaluoi luomasi malli\n",
     "from sklearn.metrics import classification_report\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from utils import plot_confusion_matrix\n",
-    "\n",
-    "\n",
-    "# Poista kommentti alta kun olet valmis\n",
-    "#plot_confusion_matrix(cm, list(range(len(dataset.target_names))), list(dataset.target_names), normalize=True)"
+    "OA = None\n",
+    "report =None # target_names -parametria ei tarvitse täyttää, sillä kyseessä on numeeriset luokat\n",
+    "cm = None\n",
+    "print(\"OA: {:.2f}\".format(OA))\n",
+    "print(report)\n",
+    "print(cm)\n",
+    "plot_confusion_matrix(cm, list(range(len(dataset.target_names))), list(dataset.target_names), normalize=True)"
    ]
   },
   {
@@ -352,10 +377,7 @@
     }
    },
    "source": [
-    "Lue halutessasi lisää ristivalidoinnista [täältä](https://scikit-learn.org/stable/modules/cross_validation.html).\n",
-    "\n",
-    "\n",
-    "\n"
+    "Lue halutessasi lisää ristivalidoinnista [täältä](https://scikit-learn.org/stable/modules/cross_validation.html).\n"
    ]
   }
  ],
