--- a/Notebooks/Harjoitus_pellot.ipynb
+++ b/Notebooks/Harjoitus_pellot.ipynb
@@ -61,7 +61,7 @@
    "metadata": {},
    "source": [
     "Sitten luo lohkodataan uusi sarake `group`, ja sijoita siihen aluksi kasvikoodi (`KVI_KASVIKOODI`) ja sen perusteella ryhmä  ([vinkki](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.Series.map.html)). \n",
-    "Valitse tämän jälkeen vain rivit, joissa ryhmä on määritelty (!=-1)."
+    "[Valitse](https://stackoverflow.com/a/46165056) tämän jälkeen vain rivit, joissa ryhmä on määritelty (!=-1)."
    ]
   },
   {
@@ -130,7 +130,7 @@
     "```python\n",
     "# Olemassa olevat\n",
     "print(list(df.columns))\n",
-    "df = df[['vain', 'halutut', 'sarakkeet']]\n",
+    "X = df[['vain', 'halutut', 'sarakkeet']]\n",
     "```\n",
     "\n",
     "Valitse luokiksi `y` kasviryhmäsarake `group`."
@@ -143,7 +143,6 @@
    "outputs": [],
    "source": [
     "print(list(parcels_modified.columns))\n",
-    "# Poista kommenttimerkki '#' haluamasi muuttujien edestä \n",
     "X = None\n",
     "y = None\n",
     "assert X and y"
@@ -174,7 +173,11 @@
    "metadata": {},
    "source": [
     "##### Datan visualisointia\n",
-    "Visualisoidaan opetusjoukkoa hieman ongelman hahmottamiseksi. Koska valitsemiesi muuttujien määrä voi olla enemmän kuin 2, käytetään PCA-analyysiä visualisoinnin tukena. "
+    "Visualisoidaan opetusjoukkoa hieman ongelman hahmottamiseksi. \n",
+    "Koska valitsemiesi muuttujien määrä voi olla enemmän kuin 2, käytetään PCA-analyysiä \n",
+    "visualisoinnin tukena. \n",
+    "\n",
+    "Jos solu palauttaa virheen, voit miettiä, että johtuiko se valitsemistasi muuttujista..."
    ]
   },
   {
