--- a/Notebooks/Harjoitus_viinit.ipynb
+++ b/Notebooks/Harjoitus_viinit.ipynb
@@ -245,7 +245,7 @@
     "def evaluate(y_pred):\n",
     "    cm = confusion_matrix(y_test, y_pred)\n",
     "    print(classification_report(y_test, y_pred))\n",
-    "    plot_confusion_matrix(cm,list(range(y_pred.max()+1)), list(range(y_pred.max()+1)), normalize=True)"
+    "    plot_confusion_matrix(cm,list(range(y.max()+1)), list(range(y.max()+1)), normalize=True)"
    ]
   },
   {
