--- a/Solutions/Harjoitus_Keras_1.ipynb
+++ b/Solutions/Harjoitus_Keras_1.ipynb
@@ -181,9 +181,23 @@
    "metadata": {},
    "source": [
     "### Opettaminen\n",
-    "Mallin voi nyt opettaa. Tämä tehdään jo scikit-learn:ista tutulla `.fit()`-metodilla. Ylimääräiseksi parametriksi annetaan kuitenkin `epochs`, joka määrittää opetuksen keston koko opetusaineiston iteraatioina. Eli jos `epochs=10`, malli pääsee näkemään jokaisen opetusaineiston havainnon 10 kertaa opetuksen aikana. Liian suuri arvo voi johtaa ylisovitukseen ja liian pieni taas alisovitukseen. Valinnaisena parametrina voi antaa myös parametrin `batch_size`, eli erän koko. Erän koko kuva sitä kuinka kuinka monta havaintoa käsitellään kerrallaan. Siinä taas liian pieni arvo johtaa hitaaseen oppimiseen ja liian suuri taas voi johtaa alisovitukseen tai suorituskykyongelmiin.\n",
+    "Mallin voi nyt opettaa. Tämä tehdään jo scikit-learn:ista tutulla [`.fit()`](https://keras.io/models/model/#fit)-metodilla. Ylimääräiseksi parametriksi annetaan kuitenkin epookki `epochs` \n",
+    "ja valinnaisena parametrina voi antaa myös parametrin `batch_size`, eli erän koko. Erän koko kuvaa sitä, kuinka monta havaintoa\n",
+    "opetusjoukosta käytetään yhdessä iteraatiossa mallin opettamisessa. Yksi iteraatio siis kuvaa sitä, että kaikki erän havainnot ovat kulkeneet \n",
+    "mallin läpi ja mallin neuronien painot ovat mahdollisesti päivittyneet. Epookki määrittää opetuksen keston kertomalla kuinka monta kertaa malli näkee \n",
+    "kaikki havainnot opetusjoukossa.\n",
     "\n",
-    "Mallin opettaminen tulostaa ruudulle jatkuvasti häviön ja tarkkuuden arvoa. Nämä kuvaavat siis kyseisen epookin sisällä opetusjoukon sisäistä häviötä ja tarkkuutta. Mitä pienempi häviö ja mitä suurempi tarkkuus, niin sitä parempi malli pitäisi olla. Kuitenkin näitä arvoja ei pidä sekoittaa testausaineistolla tehtävään evaluointiin ja vasta opetuksen jälkeinen evaluointi kertoo mallin kyvystä yleistyä ongelmaan.Jos näyttää siltä, ettei häviö pienene epookkien välillä, epookkeja saattaa olla liikaa.\n",
+    "Esimerkiksi jos opetusjoukon koko on 1000, `batch_size` on 1000 ja `epochs=2`, on opetusiteraatioiden lukumäärä 2.\n",
+    "Jos taas `batch_size=100` ja `epochs=2`, on opetusiteraatioiden määrä `10*2=20`. Kummassakin tapauksessa malli pääsee \n",
+    "näkemään jokaisen opetusjoukon havainnon kahdesti opetuksen aikana.\n",
+    "\n",
+    "Epookkien liian suuri arvo voi johtaa ylisovitukseen ja liian pieni taas alisovitukseen. Erän koossa taas liian pieni arvo johtaa \n",
+    "hitaaseen oppimiseen ja liian suuri taas voi johtaa alisovitukseen tai suorituskykyongelmiin muistin kanssa.\n",
+    "\n",
+    "Mallin opettaminen tulostaa ruudulle jatkuvasti häviön (engl. loss) ja tarkkuuden arvoa. Nämä kuvaavat siis kyseisen epookin sisällä opetusjoukon sisäistä \n",
+    "häviötä ja tarkkuutta. Mitä pienempi häviö ja mitä suurempi tarkkuus, niin sitä parempi malli pitäisi olla. Kuitenkin näitä arvoja ei pidä sekoittaa \n",
+    "testausaineistolla tehtävään evaluointiin ja vasta opetuksen jälkeinen evaluointi kertoo mallin kyvystä yleistyä ongelmaan.Jos näyttää siltä, ettei \n",
+    "häviö pienene epookkien välillä, epookkeja saattaa olla liikaa.\n",
     "\n",
     "\n",
     "Opeta malli opetusjoukolla käyttäen 5 epookkia ja erän kokona 50 havaintoa."
@@ -203,7 +217,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Opettaminen palauttaa `history`-olion, jota voi analysoida."
+    "Opettaminen palauttaa `history`-olion, jota voi analysoida. Aja alla olevat solut kahteen kertaan, jos kuva ei heti näy"
    ]
   },
   {
@@ -252,7 +266,8 @@
    "metadata": {},
    "source": [
     "### Testaaminen\n",
-    "Mallin testaamiseksi voit käyttää `evaluate()`-metodia samaan tyyliin, kuin scikit-learn -luokittelijoissa `clf.score()`-funktiota.\n"
+    "Mallin testaamiseksi voit käyttää [`evaluate()`](https://keras.io/models/model/#evaluate) samaan tyyliin, kuin scikit-learn -luokittelijoissa \n",
+    "`clf.score()`-funktiota.\n"
    ]
   },
   {
@@ -375,7 +390,8 @@
     "Neuroverkkojen opettaminen on usein hidasta puuhaa, mutta onneksi myös välituloksia opetuksessa \n",
     "voi tallentaa ja opetusta voi tarvittaessa jatkaa edellisestä kohdasta tallentamalla mallin painot.  \n",
     "\n",
-    "[Dokumentaation](https://keras.io/callbacks/#modelcheckpoint) perusteella luo `keras.callbacks.ModelCheckpoint`-funktio, joka tallentaa vain parhaat painot tiedostoon \"keras-mnist-model-best-weights.ckpt\""
+    "[Dokumentaation](https://keras.io/callbacks/#modelcheckpoint) perusteella luo `keras.callbacks.ModelCheckpoint`-funktio, \n",
+    "joka tallentaa vain parhaat painot tiedostoon \"keras-mnist-model-best-weights.ckpt\""
    ]
   },
   {
@@ -387,7 +403,7 @@
     "checkpoint_location = \"keras-mnist-model-best-weights.ckpt\"\n",
     "\n",
     "cp_callback = keras.callbacks.ModelCheckpoint(\n",
-    "    checkpoint_location, verbose=1, save_weights_only=True, save_best=True)\n",
+    "    checkpoint_location, verbose=1, save_weights_only=True, save_best_only=True)\n",
     "\n",
     "model = build_fn()\n",
     "model.fit(X_train, y_train, epochs=5, batch_size=50, callbacks = [cp_callback])\n",
@@ -450,7 +466,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Luo sitten parametriverkko ja [GridSearchCV](https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.GridSearchCV.html)\n",
+    "Luo sitten parametrisanakirja ja GridSearchCV käyttäen hyväksi [dokumentaatiota](https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.GridSearchCV.html)\n",
     ". Luomasi `build_fn` parametrien lisäksi voit antaa parametreina myös opettamiseen tarvittavia parametreja, kuten `\"epochs\"` ja `\"batch_size\"`. Muista, että GridSearchCV käyttää ristivalidointia (CV=3 oletuksena), eli liian paljon eri aikaavieviä parametrikokeiluja ei kannata tehdä kerralla."
    ]
   },
@@ -458,7 +474,10 @@
    "cell_type": "code",
    "execution_count": 82,
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -468,44 +487,8 @@
     "clf.fit(X_train, y_train)\n",
     "print(\"Parhaat parametrit: \", clf.best_params_)\n",
     "print(\"Paras opetus OA: {:.4f}\".format(clf.best_score_))\n",
-    "print(\"OA: {:.4f}\".format(clf.score(X_test, y_test)))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Lisenssi\n",
-    "Osa tämän harjoituksen esimerkeistä on muokattu sivun https://www.tensorflow.org/tutorials esimerkeistä.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#@title MIT License\n",
-    "#\n",
-    "# Copyright (c) 2017 François Chollet\n",
-    "#\n",
-    "# Permission is hereby granted, free of charge, to any person obtaining a\n",
-    "# copy of this software and associated documentation files (the \"Software\"),\n",
-    "# to deal in the Software without restriction, including without limitation\n",
-    "# the rights to use, copy, modify, merge, publish, distribute, sublicense,\n",
-    "# and/or sell copies of the Software, and to permit persons to whom the\n",
-    "# Software is furnished to do so, subject to the following conditions:\n",
-    "#\n",
-    "# The above copyright notice and this permission notice shall be included in\n",
-    "# all copies or substantial portions of the Software.\n",
-    "#\n",
-    "# THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR\n",
-    "# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,\n",
-    "# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL\n",
-    "# THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER\n",
-    "# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING\n",
-    "# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER\n",
-    "# DEALINGS IN THE SOFTWARE."
+    "print(\"OA: {:.4f}\".format(clf.score(X_test, y_test)))\n",
+    "\n"
    ]
   }
  ],
