--- a/Solutions/Harjoitus_Keras_2.ipynb
+++ b/Solutions/Harjoitus_Keras_2.ipynb
@@ -262,7 +262,7 @@
     "   sulautettu moniulotteinen Dense-taso sanaston koon perusteella. Anna `input_dim` arvoksi sanaston koko ja `output_dim` \n",
     "   arvoksi haluamasi Dense-tason koko (esimerkiksi 16).\n",
     "2. Toinen taso on [GlobalAveragePooling1D](https://keras.io/layers/pooling/#globalaveragepooling1d), jonka avulla\n",
-    "    on mahdollista\n",
+    "    on mahdollista vähentää tarvittavien neuronien määrää keskiarvojen avulla avulla.\n",
     "3. Kolmanneksi tasoksi aseta [Dense](https://keras.io/layers/core/#Dense) ja sen kooksi haluamasi koko. \n",
     "   Aseta sen aktivointifunktioksi \"relu\"\n",
     "4. Voit asettaa lisää Dense-tasoja halutessasi \n",
@@ -346,7 +346,7 @@
    },
    "outputs": [],
    "source": [
-    "evaluation = model.evaluate(X_test, y_test, batch_size=100, verbose=False)\n",
+    "evaluation = model.evaluate(X_test_padded, y_test, batch_size=100, verbose=False)\n",
     "print(\"Testijoukon häviö: {:.4f} OA: {:.4f}\".format(evaluation[0], evaluation[1]))"
    ]
   },
