--- a/Solutions/Harjoitus_R_1.ipynb
+++ b/Solutions/Harjoitus_R_1.ipynb
@@ -7,6 +7,7 @@
     "`R` Jupyte`R`issa\n",
     "==============\n",
     "\n",
+    "**WORK IN PROGRESS!**\n",
     "\n",
     "## Syntaksi tutuksi\n",
     "Muuta vapaasti solujen sisältöä kaksoisklikkaamalla niitä. Valitse solu hiirellä ja paina CTRL+Enter ajaaksesi solun. "
@@ -170,6 +171,15 @@
    "name": "R",
    "pygments_lexer": "r",
    "version": "3.4.4"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
