--- a/Solutions/Harjoitus_Sklearn_2.ipynb
+++ b/Solutions/Harjoitus_Sklearn_2.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -131,21 +131,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [
-    "# Esikäsittele ja opeta\n",
-    "\n"
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "# Esikäsittele ja opeta\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "scaler = StandardScaler()\n",
+    "X_train = scaler.fit_transform(X_train)\n",
+    "X_test = scaler.transform(X_test)\n",
+    "\n",
+    "from sklearn.svm import SVC\n",
+    "clf = SVC()\n",
+    "clf.fit(X_train, y_train)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -157,10 +163,14 @@
     "from sklearn.metrics import classification_report\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from utils import plot_confusion_matrix\n",
-    "\n",
-    "\n",
-    "# Poista kommentti alta kun olet valmis\n",
-    "#plot_confusion_matrix(cm, list(range(len(dataset.target_names))), list(dataset.target_names), normalize=True)"
+    "y_pred = clf.predict(X_test)\n",
+    "OA = clf.score(X_test, y_test)\n",
+    "report = classification_report(y_test, y_pred)\n",
+    "print(\"OA: {:.2f}\".format(OA))\n",
+    "print(report)\n",
+    "print(cm)\n",
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "plot_confusion_matrix(cm, list(range(len(dataset.target_names))), list(dataset.target_names), normalize=True)"
    ]
   },
   {
@@ -209,12 +219,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.svm import SVC\n",
-    "clf = SVC()\n",
+    "clf = SVC(C=0.1)\n",
     "\n",
     "clf.fit(X_train, y_train)\n",
     "print(\"Alkuperäinen OA: {:.2f}\".format(clf.score(X_test, y_test)))\n",
@@ -232,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -309,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,20 +358,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Lue halutessasi lisää ristivalidoinnista [täältä](https://scikit-learn.org/stable/modules/cross_validation.html)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
     }
    },
    "source": [
-    "\n"
+    "Lue halutessasi lisää ristivalidoinnista [täältä](https://scikit-learn.org/stable/modules/cross_validation.html)."
    ]
   }
  ],
@@ -386,10 +389,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
