--- a/Solutions/Harjoitus_pellot.ipynb
+++ b/Solutions/Harjoitus_pellot.ipynb
@@ -60,7 +60,7 @@
    "metadata": {},
    "source": [
     "Sitten luo lohkodataan uusi sarake `group`, ja sijoita siihen aluksi kasvikoodi (`KVI_KASVIKOODI`) ja sen perusteella ryhmä  ([vinkki](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.Series.map.html)). \n",
-    "Valitse tämän jälkeen vain rivit, joissa ryhmä on määritelty (!=-1)."
+    "[Valitse](https://stackoverflow.com/a/46165056) tämän jälkeen vain rivit, joissa ryhmä on määritelty (!=-1)."
    ]
   },
   {
@@ -127,7 +127,7 @@
     "```python\n",
     "# Olemassa olevat\n",
     "print(list(df.columns))\n",
-    "df = df[['vain', 'halutut', 'sarakkeet']]\n",
+    "X = df[['vain', 'halutut', 'sarakkeet']]\n",
     "```\n",
     "\n",
     "Valitse luokiksi `y` kasviryhmäsarake `group`."
@@ -174,7 +174,7 @@
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.5)"
+    "X_train, X_test, y_train, y_test = train_test_split(X,y,test_size=0.8)"
    ]
   },
   {
@@ -182,7 +182,11 @@
    "metadata": {},
    "source": [
     "##### Datan visualisointia\n",
-    "Visualisoidaan opetusjoukkoa hieman ongelman hahmottamiseksi. Koska valitsemiesi muuttujien määrä voi olla enemmän kuin 2, käytetään PCA-analyysiä visualisoinnin tukena. "
+    "Visualisoidaan opetusjoukkoa hieman ongelman hahmottamiseksi. \n",
+    "Koska valitsemiesi muuttujien määrä voi olla enemmän kuin 2, käytetään PCA-analyysiä \n",
+    "visualisoinnin tukena. \n",
+    "\n",
+    "Jos solu palauttaa virheen, voit miettiä, että johtuiko se valitsemistasi muuttujista..."
    ]
   },
   {
@@ -204,7 +208,7 @@
     "            edgecolor='k')\n",
     "ax.set_xlabel('1. ominaisuusvektori')\n",
     "ax.set_ylabel('2. ominaisuusvektori')\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
