--- a/Solutions/Harjoitus_viinit.ipynb
+++ b/Solutions/Harjoitus_viinit.ipynb
@@ -59,12 +59,10 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Muuta se alkamaan 0:sta"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -274,7 +272,7 @@
     "def evaluate(y_pred):\n",
     "    cm = confusion_matrix(y_test, y_pred)\n",
     "    print(classification_report(y_test, y_pred))\n",
-    "    plot_confusion_matrix(cm,list(range(y_pred.max()+1)), list(range(y_pred.max()+1)), normalize=True)"
+    "    plot_confusion_matrix(cm,list(range(y.max()+1)), list(range(y.max()+1)), normalize=True)"
    ]
   },
   {
@@ -353,10 +351,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
