--- a/Notebooks/Harjoitus_Keras_1.ipynb
+++ b/Notebooks/Harjoitus_Keras_1.ipynb
@@ -175,9 +175,23 @@
    "metadata": {},
    "source": [
     "### Opettaminen\n",
-    "Mallin voi nyt opettaa. Tämä tehdään jo scikit-learn:ista tutulla `.fit()`-metodilla. Ylimääräiseksi parametriksi annetaan kuitenkin `epochs`, joka määrittää opetuksen keston koko opetusaineiston iteraatioina. Eli jos `epochs=10`, malli pääsee näkemään jokaisen opetusaineiston havainnon 10 kertaa opetuksen aikana. Liian suuri arvo voi johtaa ylisovitukseen ja liian pieni taas alisovitukseen. Valinnaisena parametrina voi antaa myös parametrin `batch_size`, eli erän koko. Erän koko kuva sitä kuinka kuinka monta havaintoa käsitellään kerrallaan. Siinä taas liian pieni arvo johtaa hitaaseen oppimiseen ja liian suuri taas voi johtaa alisovitukseen tai suorituskykyongelmiin.\n",
+    "Mallin voi nyt opettaa. Tämä tehdään jo scikit-learn:ista tutulla [`.fit()`](https://keras.io/models/model/#fit)-metodilla.. Ylimääräiseksi parametriksi annetaan kuitenkin epookki `epochs` \n",
+    "ja valinnaisena parametrina voi antaa myös parametrin `batch_size`, eli erän koko. Erän koko kuvaa sitä, kuinka monta havaintoa\n",
+    "opetusjoukosta käytetään yhdessä iteraatiossa mallin opettamisessa. Yksi iteraatio siis kuvaa sitä, että kaikki erän havainnot ovat kulkeneet \n",
+    "mallin läpi ja mallin neuronien painot ovat mahdollisesti päivittyneet. Epookki määrittää opetuksen keston kertomalla kuinka monta kertaa malli näkee \n",
+    "kaikki havainnot opetusjoukossa.\n",
     "\n",
-    "Mallin opettaminen tulostaa ruudulle jatkuvasti häviön ja tarkkuuden arvoa. Nämä kuvaavat siis kyseisen epookin sisällä opetusjoukon sisäistä häviötä ja tarkkuutta. Mitä pienempi häviö ja mitä suurempi tarkkuus, niin sitä parempi malli pitäisi olla. Kuitenkin näitä arvoja ei pidä sekoittaa testausaineistolla tehtävään evaluointiin ja vasta opetuksen jälkeinen evaluointi kertoo mallin kyvystä yleistyä ongelmaan.Jos näyttää siltä, ettei häviö pienene epookkien välillä, epookkeja saattaa olla liikaa.\n",
+    "Esimerkiksi jos opetusjoukon koko on 1000, `batch_size` on 1000 ja `epochs=2`, on opetusiteraatioiden lukumäärä 2.\n",
+    "Jos taas `batch_size=100` ja `epochs=2`, on opetusiteraatioiden määrä `10*2=20`. Kummassakin tapauksessa malli pääsee \n",
+    "näkemään jokaisen opetusjoukon havainnon kahdesti opetuksen aikana.\n",
+    "\n",
+    "Epookkien liian suuri arvo voi johtaa ylisovitukseen ja liian pieni taas alisovitukseen. Erän koossa taas liian pieni arvo johtaa \n",
+    "hitaaseen oppimiseen ja liian suuri taas voi johtaa alisovitukseen tai suorituskykyongelmiin muistin kanssa.\n",
+    "\n",
+    "Mallin opettaminen tulostaa ruudulle jatkuvasti häviön (engl. loss) ja tarkkuuden arvoa. Nämä kuvaavat siis kyseisen epookin sisällä opetusjoukon sisäistä \n",
+    "häviötä ja tarkkuutta. Mitä pienempi häviö ja mitä suurempi tarkkuus, niin sitä parempi malli pitäisi olla. Kuitenkin näitä arvoja ei pidä sekoittaa \n",
+    "testausaineistolla tehtävään evaluointiin ja vasta opetuksen jälkeinen evaluointi kertoo mallin kyvystä yleistyä ongelmaan.Jos näyttää siltä, ettei \n",
+    "häviö pienene epookkien välillä, epookkeja saattaa olla liikaa.\n",
     "\n",
     "\n",
     "Opeta malli opetusjoukolla käyttäen 5 epookkia ja erän kokona 50 havaintoa."
@@ -197,7 +211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Opettaminen palauttaa `history`-olion, jota voi analysoida."
+    "Opettaminen palauttaa `history`-olion, jota voi analysoida. Aja alla olevat solut kahteen kertaan, jos kuva ei heti näy"
    ]
   },
   {
@@ -246,7 +260,7 @@
    "metadata": {},
    "source": [
     "### Testaaminen\n",
-    "Mallin testaamiseksi voit käyttää `evaluate()`-metodia samaan tyyliin, kuin scikit-learn -luokittelijoissa `clf.score()`-funktiota.\n"
+    "Mallin testaamiseksi voit käyttää [`evaluate()`](https://keras.io/models/model/#evaluate)-metodia samaan tyyliin, kuin scikit-learn -luokittelijoissa `clf.score()`-funktiota.\n"
    ]
   },
   {
@@ -336,7 +350,10 @@
    "metadata": {},
    "source": [
     "## Mallin muokkaaminen\n",
-    "Kokeile seuraavaksi muokata mallia paremmaksi. Kopioi malli osa osalta alle `build_fn()`-funktion sisälle, jotta voit muuttaa parametreja helpommin. Käytä funktion parametreja ja voit lisätä omia parametreja muokkaamisen helpottamiseksi, mutta muist antaa niille oletusarvo. Voit lisätä malliin uusia (Dense-) tasoja ja voit muuttaa niiden kokoa ja poiston määrää. Muuta myös erien kokoa ja epookkien määriä. Älä kuitenkaan käytä liian isoja epookkilukuja (>20) tai neuronitasojen kokoja (>10000), jottei mallin opettaminen hidastu liikaa."
+    "Kokeile seuraavaksi muokata mallia paremmaksi. Kopioi malli yllä olevista soluista osa osalta alle `build_fn()`-funktion sisälle, jotta voit muuttaa parametreja helpommin. \n",
+    "Käytä funktion parametreja ja voit lisätä omia parametreja muokkaamisen helpottamiseksi, mutta muista antaa niille oletusarvo. Voit lisätä malliin uusia (Dense-) \n",
+    "tasoja ja voit muuttaa niiden kokoa ja poiston määrää. Muuta myös erien kokoa ja epookkien määriä. Älä kuitenkaan käytä liian isoja epookkilukuja (>20) tai \n",
+    "neuronitasojen kokoja (>10000), jottei mallin opettaminen hidastu liikaa."
    ]
   },
   {
@@ -347,6 +364,7 @@
    },
    "outputs": [],
    "source": [
+    "# Muokkaa parametrit omanlaisiksesi\n",
     "def build_fn(param1=None, param2=None):\n",
     "    # Kopioi malli yllä olevista soluista sisältäen koontivaiheen (model.compile())\n",
     "    model = None\n",
@@ -370,7 +388,8 @@
     "Neuroverkkojen opettaminen on usein hidasta puuhaa, mutta onneksi myös välituloksia opetuksessa \n",
     "voi tallentaa ja opetusta voi tarvittaessa jatkaa edellisestä kohdasta tallentamalla mallin painot.  \n",
     "\n",
-    "[Dokumentaation](https://keras.io/callbacks/#modelcheckpoint) perusteella luo `keras.callbacks.ModelCheckpoint`-funktio, joka tallentaa vain parhaat painot tiedostoon \"keras-mnist-model-best-weights.ckpt\""
+    "[Dokumentaation](https://keras.io/callbacks/#modelcheckpoint) perusteella luo `keras.callbacks.ModelCheckpoint`-funktio, \n",
+    "joka tallentaa vain parhaat painot tiedostoon \"keras-mnist-model-best-weights.ckpt\""
    ]
   },
   {
@@ -449,7 +468,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Luo sitten parametriverkko ja [GridSearchCV](https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.GridSearchCV.html)\n",
+    "Luo sitten parametrisanakirja ja GridSearchCV käyttäen hyväksi [dokumentaatiota](https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.GridSearchCV.html)\n",
     ". Luomasi `build_fn` parametrien lisäksi voit antaa parametreina myös opettamiseen tarvittavia parametreja, kuten `\"epochs\"` ja `\"batch_size\"`. Muista, että GridSearchCV käyttää ristivalidointia (CV=3 oletuksena), eli liian paljon eri aikaavieviä parametrikokeiluja ei kannata tehdä kerralla."
    ]
   },
