--- a/Solutions/Harjoitus_Sklearn_1.ipynb
+++ b/Solutions/Harjoitus_Sklearn_1.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "Asentaaksesi tarvittavat paketit omalla koneellasi harjoituksen suorittamista varten:\n",
     "```\n",
-    "$ pip3 install scikit-learn pandas imbalanced-learn matplotlib==2.2.2\n",
+    "$ pip3 install scikit-learn pandas matplotlib==2.2.2\n",
     "```\n",
     "\n",
     "## Syntaksi tutuksi\n",
@@ -20,31 +20,121 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [
-    "print('Terve Maailma!')"
-   ],
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "print('Terve Maailma!')"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Jupyter Notebookeissa ajettujen solujen tiedot, kuten muuttujien arvot jäävät muistiin. \n",
+    "Tämä mahdollistaa sen, että skriptejä voi suorittaa osissa interaktiivisesti samalla tavalla, kuin \n",
+    "Pythonin konsolia käytettäessä. Aja seuraavat kaksi solua"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "print(a+2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tämä luo myös haasteita muuttujien arvoja muutettaessa. \n",
+    "Aja seuraavat kaksi solua ja aja sen jälkeen ne uudestaan.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a *= 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if a == 4:\n",
+    "    print(\"Hyvä\")\n",
+    "elif a == 8:\n",
+    "    print(\"Klikkasit solua kaksi kertaa!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Jos Notebookkia ajaessasi tuntuu siltä, että muuttujien arvot eivät ole mitä pitäisi, aja \n",
+    "kaikki ylemmät solut (muuttujan määrittelystä asti) uudestaan kertaalleen saadaksesi solujen arvot oikeiksi.\n",
+    "\n",
+    "`print`-funktion käyttö on suositeltavaa monissa kohdissa (data framejen yhteydessä muista `.head(n)`), jotta\n",
+    "näet mitä datallesi tapahtuu.\n",
+    "\n",
+    "#### Tehtävistä\n",
+    "Tehtävissä on vihjeitä eri moduulien käytöstä. Aluksi niiden `import`-lauseet on lisätty valmiiksi, \n",
+    "mutta usein joudut lisäämään ne itse.\n",
+    "\n",
+    "Tehtäviin muuttujat jotka käyttäjän on tarkoitus täydentää on alustettu arvolla `None`. Tällöin suoritus keskeytyy virheeseen, \n",
+    "ellei käyttäjä täydennä muuttujien arvoja. Aja ensin solu alla täydentämättä X:n arvoa ja sitten uudestaan antamalla X:n \n",
+    "arvoksi 3.14.\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Aseta X:n arvoksi piin kolme ensimmäistä numeroa\n",
+    "X = 3.14\n",
+    "assert X is not None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Motivointia\n",
     "Tämän nopean demon tarkoitus on näyttää miten helposti ja nopeasti kirjaston avulla saa suoritettua suoritettua \n",
     "yksinkertaisen luokittelun."
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -59,7 +149,7 @@
     "\n",
     "X, y = make_classification(n_samples=1000, n_features=4, n_classes=3, n_informative=2, n_clusters_per_class=1)\n",
     "X_train, X_test, y_train, y_test = X[:50], X[50:], y[:50], y[50:]\n",
-    "clf = svm.SVC()\n",
+    "clf = svm.SVC(gamma='auto')\n",
     "clf.fit(X_train, y_train)\n",
     "y_pred = clf.predict(X_test)\n",
     "report = classification_report(y_test, y_pred, target_names=[\"class A\", \"class B\", \"class C\"])\n",
@@ -96,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -108,7 +198,7 @@
     "from sklearn import datasets\n",
     "\n",
     "# Lataa Iris-aineisto\n",
-    "dataset = datasets.load_iris() #TODO: None\n",
+    "dataset = datasets.load_iris()\n",
     "\n",
     "print(dataset.DESCR)\n",
     "print(\"Ensimmäiset 5 havaintoa:\\n\", dataset.data[:5])"
@@ -124,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -149,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -184,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -208,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -217,7 +307,6 @@
    },
    "outputs": [],
    "source": [
-    "#TODO: None\n",
     "y = df.iloc[:, 0]\n",
     "X = df.iloc[:, 1:]"
    ]
@@ -240,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -250,7 +339,7 @@
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42) # TODO: None"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
    ]
   },
   {
@@ -268,10 +357,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
-     "is_executing": false,
      "name": "#%%\n"
     }
    },
@@ -280,8 +368,8 @@
     "from sklearn.model_selection import StratifiedShuffleSplit\n",
     "sss = StratifiedShuffleSplit(n_splits=1, random_state=42, test_size=0.2)\n",
     "train_index, test_index = next(sss.split(X, y))\n",
-    "X_train, X_test = X.iloc[train_index], X.iloc[test_index]\n",
-    "y_train, y_test = y.iloc[train_index], y.iloc[test_index]\n"
+    "X_train_sratified, X_test_sratified = X.iloc[train_index], X.iloc[test_index]\n",
+    "y_train_sratified, y_test_sratified = y.iloc[train_index], y.iloc[test_index]"
    ]
   },
   {
@@ -298,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -309,7 +397,6 @@
    "source": [
     "from sklearn.preprocessing import StandardScaler\n",
     "scaler = StandardScaler()\n",
-    "# TODO: None\n",
     "scaler.fit(X_train)\n",
     "X_train = scaler.transform(X_train)"
    ]
@@ -328,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -338,13 +425,10 @@
    "outputs": [],
    "source": [
     "from sklearn.decomposition import PCA\n",
-    "# TODO: None\n",
     "pca = PCA(n_components=0.99)\n",
     "pca.fit(X_train)\n",
     "X_train = pca.transform(X_train)\n",
-    "print(\"Muuttujien määrä oli ennen 4, nyt se on \", len(X_train[0]))\n",
-    "\n",
-    "# TODO: [kuvaaja](https://scikit-learn.org/stable/auto_examples/datasets/plot_iris_dataset.html)"
+    "print(\"Muuttujien määrä oli ennen 4, nyt se on \", len(X_train[0]))"
    ]
   },
   {
@@ -361,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -389,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -398,9 +482,8 @@
    },
    "outputs": [],
    "source": [
-    "# TODO: None\n",
     "X_test = scaler.transform(X_test)\n",
-    "X_test = pca.transform(X_test)\n"
+    "X_test = pca.transform(X_test)"
    ]
   },
   {
@@ -415,7 +498,7 @@
     "\n",
     "Datan esikäsittelyn jälkeen voidaan siirtyä luokitteluun. Kokeile ensin yhdellä algoritmilla ja käy läpi osiot \n",
     "[Opettaminen](#Opettaminen) ja [Testaaminen](#Testaaminen), jonka jälkeen voit toistaa samat vaiheet muilla\n",
-    "algoritmeilla.\n",
+    "algoritmeilla ajan salliessa.\n",
     "\n",
     "### Opettaminen\n",
     "Luo opetettu malli käyttäen algoritmia [KNeighborsClassifier](https://scikit-learn.org/stable/modules/generated/sklearn.neighbors.KNeighborsClassifier.html#sklearn.neighbors.KNeighborsClassifier)"
@@ -423,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -433,7 +516,9 @@
    "outputs": [],
    "source": [
     "# Lisää import-lause algoritmille\n",
-    "clf = None"
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "clf = KNeighborsClassifier()\n",
+    "clf.fit(X_train, y_train)"
    ]
   },
   {
@@ -445,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -455,7 +540,9 @@
    "outputs": [],
    "source": [
     "# Lisää import-lause algoritmille\n",
-    "clf = None"
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "clf = RandomForestClassifier()\n",
+    "clf.fit(X_train, y_train)"
    ]
   },
   {
@@ -471,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -481,11 +568,9 @@
    "outputs": [],
    "source": [
     "# Lisää import-lause algoritmille\n",
-    "#TODO: None\n",
     "from sklearn.svm import SVC\n",
     "clf = SVC()\n",
-    "clf.fit(X_train, y_train)\n",
-    "\n"
+    "clf.fit(X_train, y_train)"
    ]
   },
   {
@@ -516,28 +601,28 @@
     "# Tallennus\n",
     "dump(clf, 'sklearn_harj1.joblib')\n",
     "# Lataus\n",
-    "clf = load('sklearn_harj1.joblib')\n"
+    "clf = load('sklearn_harj1.joblib')"
    ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "### Testaaminen\n",
     "Opettamisen jälkeen luonnollinen seuraava vaihe on mallin testaaminen.\n",
     " \n",
     "### Ennusteiden luominen\n",
-    "Mallia voidaan nyt käyttää ennusteiden luomiseen. Luo ennustetut arvot testausjoukolle `X_test`."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+    "Mallia voidaan nyt käyttää ennusteiden luomiseen. [Luo ennustetut arvot](https://scikit-learn.org/stable/tutorial/basic/tutorial.html#learning-and-predicting)\n",
+    "`y_pred` koko testijoukolle `X_test`. "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -546,7 +631,6 @@
    },
    "outputs": [],
    "source": [
-    "# TODO: None\n",
     "y_pred = clf.predict(X_test)\n",
     "print(\"Viisi ensimmäistä ennustettua luokkaa:  {}\".format(y_pred[:5]))\n",
     "# to_numpy, jotta saman näköinen formaatti ylemmän tulosteen kanssa\n",
@@ -569,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -579,7 +663,7 @@
    "outputs": [],
    "source": [
     "OA = clf.score(X_test, y_test)\n",
-    "print(\"OA: {:.2f}\".format(OA))\n"
+    "print(\"OA: {:.2f}\".format(OA))"
    ]
   },
   {
@@ -602,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -630,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -658,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -681,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -703,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -743,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -772,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -806,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -865,10 +949,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
