--- a/Solutions/Harjoitus_Sklearn_1.ipynb
+++ b/Solutions/Harjoitus_Sklearn_1.ipynb
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -258,7 +258,7 @@
     "df.to_csv(\"iris_dataset.csv\", sep=';', index=False)\n",
     "\n",
     "# Lue aineisto levyltä\n",
-    "df = pd.read_csv(\"iris_dataset.csv\", sep=';') #TODO: None"
+    "df = pd.read_csv(\"iris_dataset.csv\", sep=';')"
    ]
   },
   {
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -324,12 +324,12 @@
     "[`train_test_split`](https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.train_test_split.html)-funktiota. \n",
     "\n",
     "Jaa luomasi `X` ja luokat `y` opetus- ja testijoukkoihin `X_train, X_test, y_train` ja  `y_test` siten, että \n",
-    "testijoukon osuus on 20% ja opetusjoukon osuus on 80% havainnoista. "
+    "testijoukon osuus on 50% ja opetusjoukon osuus on 50% havainnoista. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -339,7 +339,7 @@
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.5, random_state=42)"
    ]
   },
   {
@@ -366,7 +366,7 @@
    "outputs": [],
    "source": [
     "from sklearn.model_selection import StratifiedShuffleSplit\n",
-    "sss = StratifiedShuffleSplit(n_splits=1, random_state=42, test_size=0.2)\n",
+    "sss = StratifiedShuffleSplit(n_splits=1, random_state=42, test_size=0.5)\n",
     "train_index, test_index = next(sss.split(X, y))\n",
     "X_train_sratified, X_test_sratified = X.iloc[train_index], X.iloc[test_index]\n",
     "y_train_sratified, y_test_sratified = y.iloc[train_index], y.iloc[test_index]"
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -696,7 +696,6 @@
    "outputs": [],
    "source": [
     "from sklearn.metrics import accuracy_score, f1_score, precision_score, recall_score\n",
-    "# TODO: None\n",
     "OA = accuracy_score(y_test, y_pred)\n",
     "PA = precision_score(y_test, y_pred, average='micro')\n",
     "UA = recall_score(y_test, y_pred, average='micro')\n",
@@ -949,10 +948,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
